--- a/01/.github/release.yml
+++ b/01/.github/release.yml
@@ -3,8 +3,9 @@ name: 'C++ CI'
 on:
   push:
     branches:
-      - master
+      - main
       - feature/github_actions
+      - homework-01
 
 jobs:
   build:
